Completado metodos para obtener outliers e inliers, en proceso de creacion de graficas correctas
